# fin-scope-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README.md  env.py
api/: __init__.py  dependencies.py  main.py  routes_auth.py  routes_health.py  routes_predict.py  schemas.py
data/: __init__.py  feature_engineering.py  generate_data.py
models/: __init__.py  base_model.py  dnn_model.py  evaluation.py  explainability.py  logistic_model.py  model_registry.py  xgboost_model.py
notebooks/: model_training.ipynb
scripts/: train_models.py
services/: __init__.py  auth_service.py  database.py  db_models.py  prediction_service.py
tests/: test_data_pipeline.py  test_models.py  test_schemas.py
utils/: __init__.py  config.py  exceptions.py  logging.py
